--- a/index.html
+++ b/index.html
@@ -1,87 +1,105 @@
 <!DOCTYPE html>
-<html lang="tr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>En iyi casino bonusları - 2025</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background: #0b0b0b;
-        color: #fff;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-      }
-      header {
-        background: linear-gradient(90deg, #ffb300, #ff6a00);
-        padding: 15px 0;
-        font-size: 22px;
-        font-weight: bold;
-        text-transform: uppercase;
-      }
-      .container {
-        padding: 30px 10px;
-      }
-      .offer {
-        background: #1a1a1a;
-        border: 2px solid #ffb300;
-        border-radius: 10px;
-        padding: 20px;
-        margin: 20px auto;
-        width: 90%;
-        max-width: 400px;
-        box-shadow: 0 0 15px rgba(255, 179, 0, 0.4);
-      }
-      .offer h2 {
-        color: #ffb300;
-      }
-      .btn {
-        display: inline-block;
-        background: #ff6a00;
-        color: white;
-        text-decoration: none;
-        padding: 12px 25px;
-        border-radius: 8px;
-        font-weight: bold;
-        margin-top: 10px;
-        transition: background 0.3s;
-      }
-      .btn:hover {
-        background: #ffb300;
-      }
-      footer {
-        margin-top: 40px;
-        font-size: 13px;
-        color: #777;
-      }
-    </style>
-  </head>
-  <body>
-    <header>🎰 2025'in En İyi Bonus Siteleri</header>
-    <div class="container">
-      <div class="offer">
-        <h2>🔥 100% Bonus + 50 Free Spin</h2>
-        <p>Yeni oyuncular için özel teklif! Hemen kaydol ve ilk yatırımla bonusu al.</p>
-        <a
-          href="https://trckitr.com/?serial=61330963&creative_id=4840"
-          class="btn"
-          target="_blank"
-          >Bonus Al</a
-        >
-      </div>
+<html lang="az">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>150% Bonus + 150 FS</title>
+  <style>
+    /* Reset */
+    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
 
-      <div class="offer">
-        <h2>💎 Starlight Princess Slot</h2>
-        <p>Yeni sürüm oyun — her spin kazandırabilir! Denemek için tıkla.</p>
-        <a
-          href="https://trckitr.com/?serial=61330963&creative_id=5252"
-          class="btn"
-          target="_blank"
-          >Oyna</a
-        >
-      </div>
-    </div>
-    <footer>© 2025 BonusZona — Eğlence amaçlı tanıtım sitesidir.</footer>
-  </body>
+    body {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background: linear-gradient(-45deg, #ff0057, #f79c1c, #6a00ff, #00f5d4);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      color: #fff;
+    }
+
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
+    .container {
+      background: rgba(0,0,0,0.7);
+      padding: 40px 30px;
+      border-radius: 25px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
+      max-width: 400px;
+      width: 100%;
+      animation: fadeIn 1.5s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      0% {opacity: 0; transform: translateY(-20px);}
+      100% {opacity: 1; transform: translateY(0);}
+    }
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      color: #ffdd59;
+      text-shadow: 2px 2px 10px #000;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+    }
+
+    .bonus {
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #1dd1a1;
+      margin-bottom: 30px;
+      text-shadow: 0 0 10px #fff, 0 0 20px #1dd1a1, 0 0 30px #1dd1a1;
+      animation: glow 1.5s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+      0% { text-shadow: 0 0 5px #fff, 0 0 10px #1dd1a1, 0 0 15px #1dd1a1; }
+      100% { text-shadow: 0 0 20px #fff, 0 0 40px #1dd1a1, 0 0 60px #1dd1a1; }
+    }
+
+    .btn {
+      background: linear-gradient(45deg, #ff6b6b, #feca57);
+      color: #fff;
+      padding: 15px 35px;
+      border: none;
+      border-radius: 50px;
+      font-size: 1.2em;
+      cursor: pointer;
+      transition: 0.3s;
+      text-decoration: none;
+      display: inline-block;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    }
+
+    .btn:hover {
+      background: linear-gradient(45deg, #ff9f43, #ff6b6b);
+      transform: scale(1.1);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+    }
+
+    @media(max-width:500px){
+      h1 { font-size: 2em; }
+      p { font-size: 1em; }
+      .bonus { font-size: 1.5em; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Xoş Gəlmisiniz!</h1>
+    <p>İndi qeydiyyatdan keç və oyun dünyasına qoşul!</p>
+    <div class="bonus">150% BONUS + 150 FS</div>
+    <a href="https://trckitr.com/?serial=61330963&creative_id=5081" class="btn">İndi Oyna</a>
+  </div>
+</body>
 </html>
