--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="az">
+<html lang="tr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,92 +14,103 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      background: linear-gradient(-45deg, #ff0057, #f79c1c, #6a00ff, #00f5d4);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
+      background: radial-gradient(circle at center, #1b0035, #500060, #ff007f);
+      overflow: hidden;
       color: #fff;
     }
 
-    @keyframes gradientBG {
-      0% {background-position: 0% 50%;}
-      50% {background-position: 100% 50%;}
-      100% {background-position: 0% 50%;}
+    /* Neon Animasyonlu Arka Plan Işıkları */
+    body::before {
+      content:"";
+      position:absolute;
+      width:200%;
+      height:200%;
+      background: radial-gradient(circle, rgba(255,255,255,0.1), transparent 70%);
+      animation: moveBG 10s linear infinite;
+      z-index:0;
+    }
+
+    @keyframes moveBG {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
 
     .container {
+      position: relative;
+      z-index:1;
       background: rgba(0,0,0,0.7);
-      padding: 40px 30px;
+      padding: 50px 30px;
       border-radius: 25px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
-      max-width: 400px;
+      box-shadow: 0 0 30px rgba(255,0,150,0.5);
+      max-width: 420px;
       width: 100%;
-      animation: fadeIn 1.5s ease forwards;
-    }
-
-    @keyframes fadeIn {
-      0% {opacity: 0; transform: translateY(-20px);}
-      100% {opacity: 1; transform: translateY(0);}
     }
 
     h1 {
       font-size: 2.5em;
-      margin-bottom: 20px;
       color: #ffdd59;
-      text-shadow: 2px 2px 10px #000;
+      margin-bottom: 15px;
+      text-shadow: 0 0 10px #fff, 0 0 20px #ffdd59, 0 0 30px #ff00aa;
+      animation: glowText 1.5s ease-in-out infinite alternate;
+    }
+
+    @keyframes glowText {
+      0% { text-shadow: 0 0 10px #fff, 0 0 20px #ffdd59, 0 0 30px #ff00aa; }
+      100% { text-shadow: 0 0 20px #fff, 0 0 40px #ffdd59, 0 0 60px #ff00aa; }
     }
 
     p {
       font-size: 1.2em;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
 
     .bonus {
-      font-size: 1.8em;
+      font-size: 2em;
       font-weight: bold;
       color: #1dd1a1;
       margin-bottom: 30px;
-      text-shadow: 0 0 10px #fff, 0 0 20px #1dd1a1, 0 0 30px #1dd1a1;
-      animation: glow 1.5s ease-in-out infinite alternate;
+      text-shadow: 0 0 10px #fff, 0 0 20px #1dd1a1, 0 0 30px #00ffcc;
+      animation: neon 1.2s ease-in-out infinite alternate;
     }
 
-    @keyframes glow {
-      0% { text-shadow: 0 0 5px #fff, 0 0 10px #1dd1a1, 0 0 15px #1dd1a1; }
-      100% { text-shadow: 0 0 20px #fff, 0 0 40px #1dd1a1, 0 0 60px #1dd1a1; }
+    @keyframes neon {
+      0% { text-shadow: 0 0 5px #fff, 0 0 15px #1dd1a1, 0 0 25px #00ffcc; }
+      100% { text-shadow: 0 0 20px #fff, 0 0 40px #1dd1a1, 0 0 60px #00ffcc; }
     }
 
     .btn {
       background: linear-gradient(45deg, #ff6b6b, #feca57);
       color: #fff;
-      padding: 15px 35px;
+      padding: 18px 40px;
       border: none;
       border-radius: 50px;
-      font-size: 1.2em;
+      font-size: 1.3em;
       cursor: pointer;
       transition: 0.3s;
       text-decoration: none;
       display: inline-block;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 0 20px rgba(255,0,150,0.6), 0 0 40px rgba(255,255,0,0.4);
     }
 
     .btn:hover {
-      background: linear-gradient(45deg, #ff9f43, #ff6b6b);
       transform: scale(1.1);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+      box-shadow: 0 0 30px #ff00aa, 0 0 50px #ffdd59;
     }
 
     @media(max-width:500px){
       h1 { font-size: 2em; }
       p { font-size: 1em; }
       .bonus { font-size: 1.5em; }
+      .btn { font-size: 1.1em; padding: 15px 30px; }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Xoş Gəlmisiniz!</h1>
-    <p>İndi qeydiyyatdan keç və oyun dünyasına qoşul!</p>
+    <h1>Hoş Geldiniz!</h1>
+    <p>Hemen kaydol ve oyun dünyasına katıl!</p>
     <div class="bonus">150% BONUS + 150 FS</div>
-    <a href="https://trckitr.com/?serial=61330963&creative_id=5081" class="btn">İndi Oyna</a>
+    <a href="https://trckitr.com/?serial=61330963&creative_id=5081" class="btn">Şimdi Oyna</a>
   </div>
 </body>
 </html>
