--- a/index.html
+++ b/index.html
@@ -3,79 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>150% Bonus + 150 FS</title>
+  <title>150% Bonus ve 150FS İçin Hemen Yaz!</title>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Arial', sans-serif; }
-
-    body {
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      background-color: #8B0000; /* Tünd qırmızı kazino rəngi */
-      color: #fff;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    .container {
-      background: rgba(0,0,0,0.7);
-      padding: 50px 30px;
-      border-radius: 20px;
-      max-width: 400px;
-      width: 90%;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+    body {
+      background: url('https://i.imgur.com/R5AbhKp.jpg') no-repeat center center/cover;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      text-align: center;
+      backdrop-filter: brightness(0.7);
     }
 
     h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-      color: #FFD700; /* Qızılı yazı */
-    }
-
-    p {
-      font-size: 1.2em;
+      font-size: 2.2em;
+      text-shadow: 0 0 15px #ffb700, 0 0 30px #ff0080;
       margin-bottom: 30px;
+      line-height: 1.4;
     }
 
-    .bonus {
-      font-size: 2em;
-      font-weight: bold;
-      color: #00FFCC; /* Bonus rəngi */
-      margin-bottom: 40px;
-    }
-
-    .btn {
-      background-color: #FF4500; /* Parlaq düymə */
-      color: #fff;
-      padding: 18px 40px;
-      border: none;
-      border-radius: 50px;
-      font-size: 1.3em;
-      cursor: pointer;
-      transition: 0.3s;
-      text-decoration: none;
+    a {
       display: inline-block;
+      background: linear-gradient(45deg, #25D366, #128C7E);
+      color: white;
+      padding: 18px 45px;
+      font-size: 1.1em;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 700;
+      box-shadow: 0 0 25px #25D366;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .btn:hover {
-      background-color: #FF6347;
-      transform: scale(1.05);
+    a:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 40px #25D366;
     }
 
-    @media(max-width:500px){
-      h1 { font-size: 2em; }
-      p { font-size: 1em; }
-      .bonus { font-size: 1.5em; margin-bottom: 30px; }
-      .btn { font-size: 1.1em; padding: 15px 30px; }
+    .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: -1;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Hoş Geldiniz!</h1>
-    <p>Hemen kaydol ve oyun dünyasına katıl!</p>
-    <div class="bonus">150% BONUS + 150 FS</div>
-    <a href="https://trckitr.com/?serial=61330963&creative_id=5081" class="btn">Şimdi Oyna</a>
-  </div>
+  <div class="overlay"></div>
+  <h1>150% BONUS ve 150FS için<br> hemen yaz!</h1>
+  <a href="https://wa.me/994773430598?text=150%%20bonus%20ve%20150FS%20icin%20hemen%20yaz!" target="_blank">
+    WhatsApp’a Yaz 💬
+  </a>
 </body>
 </html>
