--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      background: url('https://i.imgur.com/R5AbhKp.jpg') no-repeat center center/cover;
+      background: url('https://i.imgur.com/7mK9D0G.jpeg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -53,7 +53,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.4);
       z-index: -1;
     }
   </style>
