--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      background: url('https://i.imgur.com/7mK9D0G.jpeg') no-repeat center center/cover;
+      background: url('https://i.imgur.com/8wFQ7RZ.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -21,22 +21,35 @@
       color: #fff;
       font-family: 'Poppins', sans-serif;
       text-align: center;
-      backdrop-filter: brightness(0.7);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.55);
+      z-index: 1;
     }
 
     h1 {
-      font-size: 2.2em;
-      text-shadow: 0 0 15px #ffb700, 0 0 30px #ff0080;
-      margin-bottom: 30px;
-      line-height: 1.4;
+      position: relative;
+      z-index: 2;
+      font-size: 2.4em;
+      text-shadow: 0 0 15px #ffb700, 0 0 25px #ff0080;
+      margin-bottom: 40px;
+      line-height: 1.3;
     }
 
     a {
+      position: relative;
+      z-index: 2;
       display: inline-block;
       background: linear-gradient(45deg, #25D366, #128C7E);
       color: white;
       padding: 18px 45px;
-      font-size: 1.1em;
+      font-size: 1.2em;
       border-radius: 50px;
       text-decoration: none;
       font-weight: 700;
@@ -47,14 +60,6 @@
     a:hover {
       transform: scale(1.1);
       box-shadow: 0 0 40px #25D366;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      z-index: -1;
     }
   </style>
 </head>
