Change background image and remove button styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     body {
-      background: url('https://i.imgur.com/8wFQ7RZ.jpg') no-repeat center center/cover;
+      background: url('https://cdn.pixabay.com/photo/2017/08/02/01/10/casino-2573138_1280.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -46,28 +46,4 @@
       position: relative;
       z-index: 2;
       display: inline-block;
-      background: linear-gradient(45deg, #25D366, #128C7E);
-      color: white;
-      padding: 18px 45px;
-      font-size: 1.2em;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 700;
-      box-shadow: 0 0 25px #25D366;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    a:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 40px #25D366;
-    }
-  </style>
-</head>
-<body>
-  <div class="overlay"></div>
-  <h1>150% BONUS ve 150FS için<br> hemen yaz!</h1>
-  <a href="https://wa.me/994773430598?text=150%%20bonus%20ve%20150FS%20icin%20hemen%20yaz!" target="_blank">
-    WhatsApp’a Yaz 💬
-  </a>
-</body>
-</html>
+      background: linear-gradient(45deg, #25D366, #128C7E
