--- a/index.html
+++ b/index.html
@@ -12,38 +12,45 @@
     }
 
     body {
-      background: url('https://cdn.pixabay.com/photo/2017/08/02/01/10/casino-2573138_1280.jpg') no-repeat center center/cover;
       height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      color: #fff;
       font-family: 'Poppins', sans-serif;
       text-align: center;
-      position: relative;
-      overflow: hidden;
+      color: #fff;
+      background: linear-gradient(135deg, #52006A, #FF0080, #FFB700);
+      background-size: 400% 400%;
+      animation: gradientMove 10s ease infinite;
     }
 
-    .overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.55);
-      z-index: 1;
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     h1 {
-      position: relative;
-      z-index: 2;
-      font-size: 2.4em;
-      text-shadow: 0 0 15px #ffb700, 0 0 25px #ff0080;
+      font-size: 2.5em;
+      text-shadow: 0 0 15px rgba(0,0,0,0.5);
       margin-bottom: 40px;
-      line-height: 1.3;
+      line-height: 1.4;
     }
 
     a {
-      position: relative;
-      z-index: 2;
       display: inline-block;
-      background: linear-gradient(45deg, #25D366, #128C7E
+      background: linear-gradient(45deg, #25D366, #128C7E);
+      color: white;
+      padding: 18px 50px;
+      font-size: 1.2em;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: 700;
+      box-shadow: 0 0 25px rgba(37,211,102,0.8);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    a:hover {
+      transform: scale(1.1);
+      box-shadow: 0 0 40px rgba(37,211,102,1);
