--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       font-family: 'Poppins', sans-serif;
       text-align: center;
       color: #fff;
-      background: linear-gradient(135deg, #52006A, #FF0080, #FFB700);
+      background: linear-gradient(135deg, #000000, #ff0000, #000000);
       background-size: 400% 400%;
       animation: gradientMove 10s ease infinite;
     }
@@ -32,10 +32,11 @@
     }
 
     h1 {
-      font-size: 2.5em;
-      text-shadow: 0 0 15px rgba(0,0,0,0.5);
+      font-size: 2.4em;
+      text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000;
       margin-bottom: 40px;
       line-height: 1.4;
+      font-weight: 700;
     }
 
     a {
@@ -54,3 +55,13 @@
     a:hover {
       transform: scale(1.1);
       box-shadow: 0 0 40px rgba(37,211,102,1);
+    }
+  </style>
+</head>
+<body>
+  <h1>150% BONUS ve 150FS için<br> hemen yaz!</h1>
+  <a href="https://wa.me/994773430598?text=150%%20bonus%20ve%20150FS%20icin%20hemen%20yaz!" target="_blank">
+    WhatsApp’a Yaz 💬
+  </a>
+</body>
+</html>
