Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://bonustrck.com/?serial=61330963&creative_id=4840" />
+    <meta http-equiv="refresh" content="0; url=https://myblogshop.top/r/PQnSKmd3/s" />
   </head>
   <body></body>
 </html>
