--- a/index.html
+++ b/index.html
@@ -1,146 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="az">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Exclusive Offers — Demo Landing</title>
-  <meta name="description" content="Discover exclusive offers and rewards. Click to learn more." />
-  <style>
-    :root{
-      --bg:#0f1724; --card:#0b1220; --muted:#9aa4b2; --accent:#22c1c3;
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:linear-gradient(180deg, #071026 0%, #071827 100%);
-      color:#e6eef6;
-      padding:24px;
-    }
-    .wrap{
-      width:100%;
-      max-width:920px;
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border-radius:16px;
-      box-shadow: 0 10px 30px rgba(2,6,23,0.7);
-      padding:28px;
-      display:grid;
-      grid-template-columns: 1fr 360px;
-      gap:20px;
-      align-items:center;
-    }
-    .left h1{margin:0 0 10px 0;font-size:28px}
-    .muted{color:var(--muted);font-size:14px;margin-bottom:18px}
-    .features{display:flex;gap:12px;flex-wrap:wrap}
-    .chip{
-      background:rgba(255,255,255,0.02);
-      padding:10px 12px;
-      border-radius:10px;
-      font-size:13px;
-      border:1px solid rgba(255,255,255,0.03);
-      min-width:140px;
-    }
-    .ctaBox{
-      margin-top:18px;
-      display:flex;
-      gap:12px;
-      align-items:center;
-    }
-    .cta{
-      background:linear-gradient(90deg,var(--accent),#5be0e2);
-      color:#041014;
-      padding:12px 18px;
-      border-radius:12px;
-      text-decoration:none;
-      font-weight:600;
-      box-shadow: 0 6px 18px rgba(34,193,195,0.18);
-    }
-    .secondary{
-      color:var(--muted);
-      font-size:13px;
-      text-decoration:underline;
-      cursor:pointer;
-      background:none;
-      border:none;
-    }
-    .right{
-      background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.00));
-      padding:18px;border-radius:12px;
-      border:1px solid rgba(255,255,255,0.03);
-    }
-    .cardTitle{font-size:16px;margin:0 0 8px 0}
-    .promoList{list-style:none;padding:0;margin:0}
-    .promoList li{padding:8px 0;border-bottom:1px dashed rgba(255,255,255,0.02);font-size:14px}
-    footer{grid-column:1/-1;margin-top:14px;color:var(--muted);font-size:13px;text-align:center}
-    /* small screens */
-    @media (max-width:880px){
-      .wrap{grid-template-columns:1fr; padding:18px}
-      .right{order:2}
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=https://affcl.org/?serial=61334614&creative_id=5899" />
+  <title>Yönləndirilir...</title>
 </head>
 <body>
-  <main class="wrap" role="main" aria-labelledby="headline">
-    <section class="left" aria-labelledby="headline">
-      <h1 id="headline">Eksklüziv Təkliflər və Kampaniyalar</h1>
-      <p class="muted">Hazırda ən yaxşı kampaniyaları və unikal təklifləri bir yerdə topladıq. Aşağıdakı 'Öyrən' düyməsinə klikləyərək daha ətraflı məlumat əldə edə bilərsiniz.</p>
-
-      <div class="features" aria-hidden="false">
-        <div class="chip">Əlavə bonuslar</div>
-        <div class="chip">Sadə qeydiyyat</div>
-        <div class="chip">Tez çıxış & ödəmə</div>
-        <div class="chip">Mobil dostu</div>
-      </div>
-
-      <div class="ctaBox">
-        <!-- AFFILIATE LINK: user-provided URL -->
-        <a id="affiliateBtn" class="cta" href="https://affcl.org/?serial=61334614&creative_id=5899" target="_blank" rel="noopener noreferrer">
-          Öyrən və İrəli Get
-        </a>
-
-        <button class="secondary" id="moreInfo">Daha çox məlumat</button>
-      </div>
-
-      <div id="details" style="display:none;margin-top:14px;color:var(--muted);font-size:14px;line-height:1.5">
-        Bu səhifə informativ xarakterlidir. Təklif və şərtlər hər zaman dəyişə bilər — klikləyərək rəsmi səhifədəki şərtləri nəzərdən keçirin.
-      </div>
-    </section>
-
-    <aside class="right" aria-labelledby="cardTitle">
-      <h3 id="cardTitle" class="cardTitle">Niyə baxmağa dəyər?</h3>
-      <ul class="promoList">
-        <li>Yığılmış kampaniya seçimləri</li>
-        <li>Sürətli keçid və etibarlı yönləndirmə</li>
-        <li>Qeydiyyat üçün sadə addımlar</li>
-        <li>Əlavə resurslar və FAQ</li>
-      </ul>
-    </aside>
-
-    <footer>
-      © <span id="year"></span> Exclusive Demo. Bu səhifə yalnız demonstrasiya üçündür — əməliyyat aparmır.
-    </footer>
-  </main>
-
-  <script>
-    // UI small interactions (not gambling functionality)
-    document.getElementById('moreInfo').addEventListener('click', function(){
-      const d = document.getElementById('details');
-      d.style.display = (d.style.display === 'none') ? 'block' : 'none';
-    });
-    document.getElementById('year').innerText = new Date().getFullYear();
-
-    // Basic analytics-friendly safe event: log click to console (you can replace with your analytics)
-    document.getElementById('affiliateBtn').addEventListener('click', function(e){
-      try {
-        // Only a local console log — replace with analytics endpoint if needed (and legal)
-        console.log('Affiliate click:', window.location.href, new Date().toISOString());
-      } catch(err){/* ignore */}
-      // Note: we DO NOT implement deposit/signup flows or any gambling mechanics here.
-    });
-  </script>
+  <p>Yönləndirilirsiniz...</p>
 </body>
 </html>
