Modify index.html for redirection and layout
Updated language attribute, title, and added viewport meta tag. Included a script for redirection and a noscript fallback.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="az">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=https://affcl.org/?serial=61334614&creative_id=5899" />
-  <title>Yönləndirilir...</title>
+  <meta charset="UTF-8">
+  <title>Loading...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>
+    window.location.replace("https://refpa3665.com/L?tag=d_4954420m_45415c__[]general[]_d188494_l241738_direct_link&site=4954420&ad=45415&r=registration");
+  </script>
 </head>
 <body>
-  <p>Yönləndirilirsiniz...</p>
+  <noscript>
+    <meta http-equiv="refresh" content="0; url=https://refpa3665.com/L?tag=d_4954420m_45415c__[]general[]_d188494_l241738_direct_link&site=4954420&ad=45415&r=registration">
+  </noscript>
 </body>
 </html>
